# TFrame

./: app_types.gradle  build.gradle  build_types.gradle  component_app.gradle  component_build.gradle  component_lib.gradle  gradle.properties  lint.xml  settings.gradle  versions.gradle
app/: build.gradle
apps/thredim/app_tmp_translate/: CMakeLists.txt  Readme.md  build.gradle  proguard-rules.pro
apps/thredim/app_tmp_translate/pcm/include/pcm/: pcm.c
apps/thredim/app_tmp_translate/src/main/: AndroidManifest.xml
apps/thredim/app_tmp_translate/src/main/assets/: logback.xml
apps/thredim/app_tmp_translate/src/main/java/com/sc/tmp_translate/: DisplayActivity.kt  MainActivity.kt  TranslateActivity.kt  TranslateOneDisplayActivity.kt
apps/thredim/app_tmp_translate/src/main/java/com/sc/tmp_translate/adapter/: ItemDiffCallback.kt  RecordDiffCallback.kt  TransRecordAdapter.kt  TransText2Adapter.kt  TransTextAdapter.kt
apps/thredim/app_tmp_translate/src/main/java/com/sc/tmp_translate/app/: AppHope.kt
apps/thredim/app_tmp_translate/src/main/java/com/sc/tmp_translate/base/: BaseTransActivity.kt  BaseTransDialogFragment.kt  BaseTransFragment.kt
apps/thredim/app_tmp_translate/src/main/java/com/signway/aec/: AEC.java
apps/thredim/app_tmp_translate/src/main/jni/: PcmRecord.cpp
apps/thredim/app_tmp_translate/src/main/res/drawable/: setting_selector_tunnel.xml
apps/thredim/app_tmp_translate/src/main/res/drawable-v24/: ic_network.xml
apps/thredim/app_tmp_translate/src/main/res/layout/: activity_display.xml  activity_main.xml  activity_translate.xml  activity_translate_one_display.xml  dialog_display.xml  dialog_text_play.xml  dialog_text_size.xml  display_other.xml  display_trans_more.xml  fragment_trans_main.xml  fragment_trans_record.xml  fragment_translating.xml  fragment_translating_od.xml  item_language.xml  item_more_display.xml  item_record.xml  item_same_display.xml  item_simple_spinner.xml
apps/thredim/app_tmp_translate/src/main/res/navigation/: home_navigation.xml
apps/thredim/app_tmp_translate/src/main/res/values/: colors.xml  dimnes.xml  strings.xml  styles.xml
apps/thredim/app_tmp_translate/src/main/res/values-en/: strings.xml
apps/thredim/app_tmp_translate/src/main/res/values-fr/: strings.xml
lib_audio/src/main/jni/: CMakeLists.txt  dualrecorder.cpp
lib_audio/src/main/jni/alsa/: global.h
(+1178 files in other folders)
